0.11

* New syntax for "new", with parameters such as max => 1, trans => 1,
  or no_exact => 1.
* Improved performance for Unicode searches.
* Transposition support
* Maximum edit distance is now switched off by default.

0.09

Error in documentation and examples regarding the return value of
"nearest" (it should have said the return value is -1 for a miss).

0.08

Alterations for the benefit of unification with CPAN::Nearest.

0.07

This fixes a bug which happens in comparisons of Unicode-encoded
strings with non-Unicode encoded strings.

0.06

This adds a directory of examples to the distribution.
