@@ -68,7 +68,7 @@ sub xtidy
 
     # Remove sobvious.
 
-    $text =~ s/use\s+(strict|warnings|utf8);\s+//g;
+    $text =~ s/use\s+(strict|warnings);\s+//g;
     $text =~ s/^binmode\s+STDOUT.*?utf8.*?\s+$//gm;
 
     # Replace tabs with spaces.
